--- a/src/app/shop/templates/listorder.component.html
+++ b/src/app/shop/templates/listorder.component.html
@@ -33,7 +33,8 @@
                             <td>
                                 <div class="media">
                                     <div class="d-flex">
-                                        <img id="trendingprd" style="margin-left: 0px;" [src]="url+order.image" alt="" class="img-fluid">
+                                        <img id="trendingprd" style="margin-left: 0px;" [src]="url+order.image" alt=""
+                                            class="img-fluid">
                                     </div>
                                     <div class="media-body">
                                         <p>{{ order.name }}</p>
@@ -123,7 +124,7 @@
 <!-- CSS ảnh  -->
 <style>
     img#trendingprd {
-    width: 100px;
-    height: 100px;
-}
+        width: 100px;
+        height: 100px;
+    }
 </style>
