--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3115,7 +3115,7 @@ label {
 
 .filter-bar {
   padding: 0px 20px 10px 20px;
-  background: #828bb3; }
+  background: #000000; }
   .filter-bar a, .filter-bar i {
     color: #000; }
 
