--- a/src/app/shop/templates/header.component.html
+++ b/src/app/shop/templates/header.component.html
@@ -15,44 +15,45 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu_nav ml-auto">
-						<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+						<li class="nav-item active"><a class="nav-link" href="index.html">Trang chủ</a></li>
 						<li class="nav-item submenu dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-								aria-haspopup="true" aria-expanded="false">Shop</a>
+								aria-haspopup="true" aria-expanded="false">Sản phẩm</a>
 							<ul class="dropdown-menu">
-								<li class="nav-item"><a class="nav-link" [routerLink]="['/products']">Sản phẩm</a></li>
-								<li class="nav-item"><a class="nav-link" href="category.html">Danh mục</a></li>
+								<li class="nav-item"><a class="nav-link" [routerLink]="['/products']">Tất cả sản
+										phẩm</a></li>
+								<!-- <li class="nav-item"><a class="nav-link" href="category.html">Danh mục</a></li> -->
 								<li class="nav-item"><a class="nav-link" [routerLink]="['/listorder']">Xem Giỏ Hàng</a>
 								</li>
-								<li class="nav-item"><a class="nav-link" [routerLink]="['/checkout']">Thanh toán sản
-										phẩm</a></li>
-								<li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>
-								<li class="nav-item"><a class="nav-link"
-										[routerLink]="['/order-detail']">Confirmation</a></li>
+								<li class="nav-item"><a class="nav-link" [routerLink]="['/checkout']">Thanh toán </a>
+								</li>
+								<li class="nav-item"><a class="nav-link" [routerLink]="['/order-detail']">Xác nhận</a>
+								</li>
 							</ul>
 						</li>
 						<li class="nav-item submenu dropdown">
-							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-								aria-haspopup="true" aria-expanded="false">Blog</a>
-							<ul class="dropdown-menu">
-								<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-								<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-							</ul>
+							<a [routerLink]="['/register']" class="nav-link dropdown-toggle" data-toggle="dropdown"
+								role="button" aria-haspopup="true" aria-expanded="false">Đăng ký</a>
 						</li>
 						<li class="nav-item submenu dropdown">
-							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-								aria-haspopup="true" aria-expanded="false">Pages</a>
-							<ul class="dropdown-menu">
-								<li class="nav-item"><a class="nav-link" [routerLink]="['/login']">Login</a></li>
-								<li class="nav-item"><a class="nav-link" href="tracking.html">Tracking</a></li>
-								<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
+							<a [routerLink]="['/login']" class="nav-link dropdown-toggle" data-toggle="dropdown"
+								role="button" aria-haspopup="true" aria-expanded="false"><span *ngIf="!check">
+									<a href="#" class="join" [routerLink]="['/login']">Đăng Nhập</a></span>{{name}}<span
+									class="tf-ion-ios-arrow-down"></span></a>
+							<ul *ngIf="check" class="dropdown-menu">
+								<li>
+									<a href="#" class="join" (click)="logout()">
+										<i class="flaticon-round-account-button-with-user-inside"></i>
+										Đăng Xuất
+									</a>
+								</li>
 							</ul>
 						</li>
-						<li class="nav-item"><a class="nav-link" href="https://zalo.me/0343689757">Contact</a></li>
+						<li class="nav-item"><a class="nav-link" href="https://zalo.me/0343689757">Hỗ trợ</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li class="nav-item"><a [routerLink]="['/listorder']" class="fa fa-shopping-cart" style="font-size:30px;color:red"><span
-									></span></a></li>
+						<li class="nav-item"><a [routerLink]="['/listorder']" class="fa fa-shopping-cart"
+								style="font-size:30px;color:red"><span></span></a></li>
 						<li class="nav-item">
 							<button class="search"><span class="lnr lnr-magnifier" id="search"></span></button>
 						</li>
