--- a/src/app/shop/templates/product-detail.component.html
+++ b/src/app/shop/templates/product-detail.component.html
@@ -6,7 +6,9 @@
 			<div class="col-lg-6">
 				<div class="s_Product_carousel">
 					<div class="single-prd-item">
-						<img class="img-fluid" [src]="image1" [alt]="products.name">
+						<!-- <h1>Chi Tiết Sản Phẩm</h1> -->
+						<img class="img-fluid" (click)="changeImage(product.image)" [src]="url+'public/uploads/'+products?.image"
+							[alt]="products.name">
 					</div>
 				</div>
 			</div>
@@ -18,7 +20,19 @@
 					<h6>Nhà Cung Cấp:{{ products.category.name }}</h6>
 					<h6>Số Lượng:{{ products.quantity }}</h6>
 					<p>{{ products.description }}</p>
-					<a class="primary-btn" (click)="addToCart(product.id)">Thêm vào giỏ hàng</a>
+					<div class='carousel slide' data-ride='carousel'>
+						<ol class='carousel-indicators'>
+							<li *ngFor="let item of products.image_products">
+								<img (click)="changeImage(item.image)" [src]="url+item?.image" [alt]="item.image"
+								class="act">
+							</li>
+							<li><br><br><br>
+								<img (click)="changeImage(products.image)" [src]="url+products.image" class="act">
+							</li><br><br><br><br><br>
+						</ol>
+					</div>
+					<a (click)="addToCart(products.id)" class="btn btn-info text-white">Thêm Vào giỏ
+						Hàng</a><br><br><br><br>
 				</div>
 			</div>
 		</div>
@@ -27,7 +41,17 @@
 <!-- css ảnh  -->
 <style>
 	img.img-fluid {
-		width: 500px;
-		height: 400px;
+		width: 350px;
+		height: 250px;
 	}
+
+	img.act {
+		width: 150px;
+		height: 150px;
+		display: inline-block;
+		padding: 6px;
+
+		margin: 66px 0px 0px 163px;
+	}
+	
 </style>
