--- a/src/app/shop/templates/home.component.html
+++ b/src/app/shop/templates/home.component.html
@@ -98,7 +98,7 @@
             </div>
             <div class="row">
                 <!-- single product -->
-                <div class="col-lg-3 col-md-6"  *ngFor="let product of trending_top">
+                <div class="col-lg-3 col-md-6" *ngFor="let product of trending_top">
                     <div class="single-product">
                         <img id="trendingprd" [src]=" url+'public/uploads/'+ product.image" alt="" class="img-fluid">
                         <div class="product-details">
@@ -135,7 +135,12 @@
     <style>
         img#prdnew {
             width: 250px;
-            height: 250px;
+            height: 240px;
+        }
+
+        img#trendingprd {
+            width: 250px;
+            height: 240px;
         }
     </style>
 
