--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -6251,7 +6251,7 @@ button.close {
 
 .carousel-indicators {
     position: absolute;
-    right: 0;
+    /* right: 0; */
     bottom: 10px;
     left: 0;
     z-index: 15;
@@ -6259,7 +6259,7 @@ button.close {
     display: flex;
     -ms-flex-pack: center;
     justify-content: center;
-    padding-left: 0;
+    /* padding-left: 0; */
     margin-right: 15%;
     margin-left: 15%;
     list-style: none
